--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "debug": "nodemon --inspect dist/index.js",
     "build": "tsc",
     "start": "ts-node src/index.ts",
-    "test": "jest"
+    "test": "jest --detectOpenHandles --no-cache"
   },
   "dependencies": {
     "@types/body-parser": "^1.19.5",
