--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "@types/body-parser": "^1.19.5",
     "body-parser": "^1.20.2",
-    "express": "^4.18.3"
+    "express": "^4.18.3",
+    "express-validator": "^7.0.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
