--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
     "@types/body-parser": "^1.19.5",
     "body-parser": "^1.20.2",
     "express": "^4.18.3",
-    "express-validator": "^7.0.1"
+    "express-validator": "^7.0.1",
+    "mongodb": "^6.5.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
-    "@types/node": "^20.11.30",
+    "@types/node": "^20.12.7",
     "@types/supertest": "^6.0.2",
     "cors": "^2.8.5",
     "jest": "^29.7.0",
